[gd_scene load_steps=9 format=3 uid="uid://dothcfopq8pgb"]

[ext_resource type="Script" path="res://Global/TestMouse.gd" id="1_qsp2r"]
[ext_resource type="TileSet" uid="uid://bf1ggp1mx1r3x" path="res://Terrain/TileSet1.tres" id="2_de5bm"]
[ext_resource type="PackedScene" uid="uid://c7yy76ehjeoin" path="res://GameObjects/Ball/Ball.tscn" id="3_d2wb4"]
[ext_resource type="AudioStream" uid="uid://caiqpi4603yhx" path="res://Sounds/putt.wav" id="4_4li4c"]
[ext_resource type="Script" path="res://Maps/UI.gd" id="5_pw5u4"]
[ext_resource type="Texture2D" uid="uid://ciwq4easgbbss" path="res://camera_button.png" id="6_kww7y"]
[ext_resource type="Texture2D" uid="uid://dhyxcpmvqaskx" path="res://reset.png" id="7_qvqki"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_utmr2"]
bounce = 1.0

[node name="Map0" type="Node2D"]
position = Vector2(271, 327)
script = ExtResource("1_qsp2r")

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
position = Vector2(7, -28)
tile_set = ExtResource("2_de5bm")
format = 2
layer_0/tile_data = PackedInt32Array(-131073, 65536, 1, -65537, 65536, 1, -1, 65536, 1, -2, 65536, 1, -65538, 65536, 1, -131074, 65536, 1, -196608, 65536, 1, -131072, 65536, 1, -65536, 65536, 1, 65533, 65536, 1, 65534, 65536, 1, 65535, 65536, 1, 0, 65536, 1, 1, 65536, 1, -65535, 65536, 1, -131071, 65536, 1, -196607, 65536, 1, -262143, 65536, 1, -262144, 65536, 1, -196609, 65536, 1, -196610, 65536, 1, -196611, 65536, 1, -131075, 65536, 1, -65539, 65536, 1, -3, 65536, 1, -262146, 65536, 1, -327682, 65536, 1, -393218, 65536, 1, -458754, 65536, 1, -327680, 65536, 1, -393216, 65536, 1, -327681, 65536, 1, -393217, 65536, 1, -458753, 65536, 1, -524289, 65536, 1, -262145, 65536, 1, -589825, 65536, 1, -589826, 65536, 1, -524290, 65536, 1, -524288, 65536, 1, -458752, 65536, 1, -589824, 65536, 1, -655360, 65536, 1, -458755, 65536, 1, -458756, 65536, 1, -131076, 65536, 1, -65540, 65536, 1, -4, 65536, 1, -5, 65536, 1, -6, 65536, 1, -65542, 65536, 1, -131078, 65536, 1, -131077, 65536, 1, -65541, 65536, 1, -196606, 65536, 1, -196605, 65536, 1, -196604, 65536, 1, -131068, 65536, 1, -65532, 65536, 1, -65533, 65536, 1, -65534, 65536, 1, -131070, 65536, 1, -131069, 65536, 1, 131070, 65536, 1, 196606, 65536, 1, 262142, 65536, 1, 262143, 65536, 1, 196607, 65536, 1, 131071, 65536, 1, 65536, 65536, 1, 131072, 65536, 1, 196608, 65536, 1, -589831, 65536, 1, -524295, 65536, 1, -458759, 65536, 1, -393223, 65536, 1, -327687, 65536, 1, -262151, 65536, 1, -196615, 65536, 1, -131079, 65536, 1, -65543, 65536, 1, -7, 65536, 1, -8, 65536, 1, -9, 65536, 1, -65545, 65536, 1, -131081, 65536, 1, -196617, 65536, 1, -262153, 65536, 1, -327689, 65536, 1, -393225, 65536, 1, -458761, 65536, 1, -524297, 65536, 1, -589833, 65536, 1, -589832, 65536, 1, -524296, 65536, 1, -458760, 65536, 1, -393224, 65536, 1, -327688, 65536, 1, -262152, 65536, 1, -196616, 65536, 1, -131080, 65536, 1, -65544, 65536, 1, -458757, 65536, 1, -458758, 65536, 1, -589830, 65536, 1, -524293, 65536, 1, -524294, 65536, 1, -589829, 65536, 1, -589828, 65536, 1, -524291, 65536, 1, -524292, 65536, 1, -589827, 65536, 1, -524287, 65536, 1, -524286, 65536, 1, -524285, 65536, 1, -524284, 65536, 1, -524283, 65536, 1, -65531, 65536, 1, -131067, 65536, 1, -196603, 65536, 1, -262139, 65536, 1, -327675, 65536, 1, -393211, 65536, 1, -458747, 65536, 1, -589819, 65536, 1, -655355, 65536, 1, -655354, 65536, 1, -655353, 65536, 1, -589817, 65536, 1, -524281, 65536, 1, -458745, 65536, 1, -393209, 65536, 1, -327673, 65536, 1, -262137, 65536, 1, -196601, 65536, 1, -131065, 65536, 1, -65529, 65536, 1, -65530, 65536, 1, -131066, 65536, 1, -196602, 65536, 1, -262138, 65536, 1, -327674, 65536, 1, -393210, 65536, 1, -458746, 65536, 1, -524282, 65536, 1, -589818, 65536, 1, -655356, 65536, 1, -655357, 65536, 1, -589821, 65536, 1, -589822, 65536, 1, -589823, 65536, 1, -655359, 65536, 1, -655358, 65536, 1, -589820, 65536, 1, -589834, 65536, 1, -524298, 65536, 1, -458762, 65536, 1, -458763, 65536, 1, -458764, 65536, 1, -524300, 65536, 1, -589836, 65536, 1, -589835, 65536, 1, -524299, 65536, 1, -655370, 65536, 1, -720906, 65536, 1, -786442, 65536, 1, -851978, 65536, 1, -917514, 65536, 1, -983050, 65536, 1, -1048586, 65536, 1, -1114122, 65536, 1, -1179658, 65536, 1, -655371, 65536, 1, -655372, 65536, 1, -720908, 65536, 1, -786444, 65536, 1, -851980, 65536, 1, -851979, 65536, 1, -917515, 65536, 1, -983051, 65536, 1, -786443, 65536, 1, -720907, 65536, 1, -917516, 65536, 1, -983052, 65536, 1, -1048588, 65536, 1, -1114124, 65536, 1, -1114123, 65536, 1, -1179659, 65536, 1, -1048587, 65536, 1, -1179660, 65536, 1, -589816, 65536, 1, -524279, 65536, 1, -589815, 65536, 1, -655351, 65536, 1, -655352, 65536, 1, -524280, 65536, 1, -524278, 65536, 1, -589814, 65536, 1, -655350, 65536, 1, -720886, 65536, 1, -786422, 65536, 1, -851958, 65536, 1, -917494, 65536, 1, -983030, 65536, 1, -1048566, 65536, 1, -1114102, 65536, 1, -1179638, 65536, 1, -1245174, 65536, 1, -1245176, 65536, 1, -1179640, 65536, 1, -1114104, 65536, 1, -1048568, 65536, 1, -983032, 65536, 1, -917496, 65536, 1, -851960, 65536, 1, -786424, 65536, 1, -720888, 65536, 1, -720887, 65536, 1, -786423, 65536, 1, -851959, 65536, 1, -917495, 65536, 1, -983031, 65536, 1, -1048567, 65536, 1, -1114103, 65536, 1, -1179639, 65536, 1, -1245175, 65536, 1, -786425, 65536, 1, -786426, 65536, 1, -786427, 65536, 1, -786428, 65536, 1, -786429, 65536, 1, -786430, 65536, 1, -786431, 65536, 1, -786432, 65536, 1, -720897, 65536, 1, -720898, 65536, 1, -720899, 65536, 1, -720900, 65536, 1, -720901, 65536, 1, -720902, 65536, 1, -720903, 65536, 1, -720904, 65536, 1, -720905, 65536, 1, -1179657, 65536, 1, -1114120, 65536, 1, -1048583, 65536, 1, -983046, 65536, 1, -917509, 65536, 1, -851972, 65536, 1, -786435, 65536, 1, -786434, 65536, 1, -786433, 65536, 1, -851968, 65536, 1, -851967, 65536, 1, -1245177, 65536, 1, -1179642, 65536, 1, -1114107, 65536, 1, -1048572, 65536, 1, -983037, 65536, 1, -917502, 65536, 1, -1179656, 65536, 1, -1114119, 65536, 1, -1048582, 65536, 1, -983045, 65536, 1, -917508, 65536, 1, -851971, 65536, 1, -851970, 65536, 1, -851969, 65536, 1, -917504, 65536, 1, -917503, 65536, 1, -983038, 65536, 1, -1048573, 65536, 1, -1114108, 65536, 1, -1179643, 65536, 1, -1245178, 65536, 1, -1245179, 65536, 1, -1179644, 65536, 1, -1114109, 65536, 1, -1048574, 65536, 1, -983039, 65536, 1, -917507, 65536, 1, -983044, 65536, 1, -1048581, 65536, 1, -1114118, 65536, 1, -1179655, 65536, 1, -655369, 0, 3, -720889, 131072, 3, -655368, 65536, 3, -655367, 65536, 3, -655366, 65536, 3, -655365, 65536, 3, -655364, 65536, 3, -655363, 65536, 3, -655362, 65536, 3, -655361, 65536, 3, -720896, 65536, 3, -720895, 65536, 3, -720894, 65536, 3, -720893, 65536, 3, -720892, 65536, 3, -720891, 65536, 3, -720890, 65536, 3, 327678, 65536, 2, 327679, 65536, 2, 262144, 65536, 2, 65531, 65536, 2, 65530, 65536, 2, 65529, 65536, 2, 65528, 65536, 2, 65527, 65536, 2, -393228, 65536, 2, -393227, 65536, 2, -458743, 65536, 2, -458742, 65536, 2, 3, 65536, 2, 4, 65536, 2, 5, 65536, 2, 6, 65536, 2, 7, 65536, 2, -458750, 65536, 2, -458749, 65536, 2, -393221, 65536, 2, -393220, 65536, 2, -196613, 65536, 0, -262141, 65536, 0, -851964, 65536, 0, -851963, 65536, 0, -851962, 65536, 0, -786438, 65536, 0, -786439, 65536, 0, -786440, 65536, 0, -1245196, 65536, 0, -1245195, 65536, 0, -1245194, 65536, 0, -1245193, 65536, 0, -1245192, 65536, 0, -1245191, 65536, 0, -1310715, 65536, 0, -1310714, 65536, 0, -1310713, 65536, 0, -1310712, 65536, 0, -1310711, 65536, 0, -1310710, 65536, 0, -458765, 0, 1, -524301, 0, 1, -589837, 0, 1, -655373, 0, 1, -720909, 0, 1, -786445, 0, 1, -851981, 0, 1, -917517, 0, 1, -983053, 0, 1, -1048589, 0, 1, -1114125, 0, 1, -1179661, 0, 1, -393212, 0, 1, -327676, 0, 1, -327683, 0, 1, 196605, 0, 1, 262141, 0, 1, -327690, 0, 1, -262154, 0, 1, -196618, 0, 1, -131082, 0, 1, -65546, 0, 1, -10, 0, 1, -393208, 131072, 1, -327672, 131072, 1, -262136, 131072, 1, -196600, 131072, 1, -131064, 131072, 1, -65528, 131072, 1, 131073, 131072, 1, 196609, 131072, 1, -393215, 131072, 1, -327686, 131072, 1, -262150, 131072, 1, -524277, 131072, 1, -589813, 131072, 1, -655349, 131072, 1, -720885, 131072, 1, -786421, 131072, 1, -851957, 131072, 1, -917493, 131072, 1, -983029, 131072, 1, -1048565, 131072, 1, -1114101, 131072, 1, -1179637, 131072, 1, -1245173, 131072, 1, -851977, 131072, 1, -917513, 131072, 1, -983049, 196608, 0, -917497, 0, 1, -983033, 0, 1, -1048569, 262144, 0, -786441, 196608, 3, -196614, 196608, 3, -262142, 196608, 3, -458748, 262144, 0, -393219, 262144, 0, -1048584, 65536, 1, -983047, 262144, 0, -917510, 262144, 0, -851973, 262144, 0, -851966, 0, 3, -786436, 131072, 3, -1114121, 65536, 1, -1179641, 65536, 1, -458751, 196608, 0, -393222, 196608, 0, -262140, 262144, 1, -196612, 262144, 1, -262147, 262144, 1, -327679, 196608, 1, -327678, 131072, 0, -262148, 0, 0, 131068, 0, 2, 65538, 131072, 2, 65537, 196608, 0, 2, 196608, 0, 131069, 262144, 0, 65532, 262144, 0, 65526, 0, 2, 8, 131072, 2, -458744, 196608, 0, -393226, 262144, 0, -393229, 0, 2, -458741, 131072, 2, 262145, 131072, 2, 327677, 0, 2, -917501, 196608, 0, -983036, 196608, 0, -1048571, 196608, 0, -1114106, 65536, 1, -917500, 131072, 2, -983035, 131072, 2, -1048570, 65536, 2, -851974, 0, 2, -917511, 0, 2, -983048, 65536, 2, -1048585, 65536, 1, -1114105, 65536, 1, -851965, 65536, 5, -851961, 262144, 1, -786437, 65536, 5, -917506, 196608, 1, -983043, 196608, 1, -1048580, 196608, 1, -1114117, 196608, 1, -1179654, 196608, 1, -1245197, 0, 0, -1245190, 131072, 0, -1179653, 131072, 0, -1114116, 131072, 0, -1048579, 131072, 0, -983042, 131072, 0, -917505, 65536, 0, -1245181, 0, 0, -1179646, 0, 0, -1114111, 0, 0, -1048576, 0, 0, -983040, 262144, 1, -1048575, 262144, 1, -1114110, 262144, 1, -1179645, 262144, 1, -1245180, 262144, 1, -1310716, 0, 0, -1310709, 131072, 0)
layer_1/name = "Hole"
layer_1/tile_data = PackedInt32Array(-786433, 327680, 8)

[node name="Ball" parent="." instance=ExtResource("3_d2wb4")]
position = Vector2(-16, -64)
physics_material_override = SubResource("PhysicsMaterial_utmr2")
max_contacts_reported = 1
contact_monitor = true
linear_damp = 1.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_4li4c")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("5_pw5u4")

[node name="Overlay" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerScore" type="Label" parent="CanvasLayer/Overlay"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 87.0
offset_bottom = 17.0
grow_vertical = 2

[node name="Par" type="Label" parent="CanvasLayer/Overlay"]
layout_mode = 0
offset_left = 750.0
offset_right = 794.0
offset_bottom = 23.0
text = "Par: 4"

[node name="Button" type="Button" parent="CanvasLayer/Overlay"]
layout_mode = 0
offset_left = 7.0
offset_top = 503.0
offset_right = 118.0
offset_bottom = 614.0
scale = Vector2(0.503299, 0.515239)
mouse_default_cursor_shape = 2
toggle_mode = true
button_mask = 2
icon = ExtResource("6_kww7y")

[node name="CameraButton" type="Button" parent="CanvasLayer/Overlay"]
layout_mode = 0
offset_left = 7.0
offset_top = 503.0
offset_right = 118.0
offset_bottom = 614.0
scale = Vector2(0.503299, 0.515239)
mouse_default_cursor_shape = 2
toggle_mode = true
icon = ExtResource("6_kww7y")

[node name="ResetButton" type="Button" parent="CanvasLayer/Overlay"]
layout_mode = 0
offset_left = 10.0
offset_top = 450.0
offset_right = 998.0
offset_bottom = 1438.0
scale = Vector2(0.0506037, 0.0506225)
mouse_default_cursor_shape = 2
icon = ExtResource("7_qvqki")

[node name="LevelCamera" type="Camera2D" parent="."]
position = Vector2(-1, -270)
enabled = false
zoom = Vector2(0.705, 0.705)

[connection signal="mouse_entered" from="CanvasLayer/Overlay/CameraButton" to="." method="disable_putts"]
[connection signal="mouse_exited" from="CanvasLayer/Overlay/CameraButton" to="." method="disable_putts"]
[connection signal="pressed" from="CanvasLayer/Overlay/CameraButton" to="." method="_toggle_zoom"]
[connection signal="pressed" from="CanvasLayer/Overlay/ResetButton" to="." method="reset_scene"]
